agora é possivel logar tanto como ONG quanto como usuario. é possivel ver os perfis e escolher qualquer ong para realizar a doação.

--- a/codigo/public/badge.html
+++ b/codigo/public/badge.html
@@ -19,7 +19,7 @@
         </a>
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
             <a href="/public/ranking.html" class="nav-link link-white">Ranking</a> 
-            <a href="#" class="nav-link link-white">ONGs</a>
+            <a href="/public/ongs.html" class="nav-link link-white">ONGs</a>
             <a href="#" class="nav-link link-white">Seja um Voluntário</a>
         </nav>
         
@@ -27,10 +27,10 @@
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
-                <img src="/public/assets/images/usuario.png" alt="Usuário" class="usuario"> 
+                <img src="/public/assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
-                <li><a class="dropdown-item" href="/public/sprint_1/Perfil_usuario/index.html" id="userProfileLink">Perfil</a></li> 
+                <li><a class="dropdown-item" href="/public/perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#" id="logoutLink">Sair</a></li>
             </ul>
