--- a/codigo/public/cadastro_usuario.html
+++ b/codigo/public/cadastro_usuario.html
@@ -5,30 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alimentação Para Todos - Cadastro</title>
   <link rel="stylesheet" href="assets/css/base.css">
-  <link rel="stylesheet" href="assets/css/cadastro_usuario.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/cadastro_usuario.css">
 
 </head>
 <body>
-    <header class="d-flex align-items-center p-3 bg-light position-relative">
+    <header>
         <a href="/public/index.html" class="d-flex align-items-center position-relative z-2"> 
             <img src="/public/assets/images/logo.png" alt="Logo" class="logo me-3"> 
             <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
             <a href="/public/ranking.html" class="nav-link link-white">Ranking</a> 
-            <a href="#" class="nav-link link-white">ONGs</a>
+            <a href="/public/ongs.html" class="nav-link link-white">ONGs</a>
             <a href="#" class="nav-link link-white">Seja um Voluntário</a>
         </nav>
-      
+        
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
-                <img src="/public/assets/images/usuario.png" alt="Usuário" class="usuario"> 
+                <img src="/public/assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
-                <li><a class="dropdown-item" href="/public/sprint_1/Perfil_usuario/index.html" id="userProfileLink">Perfil</a></li> 
+                <li><a class="dropdown-item" href="/public/perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#" id="logoutLink">Sair</a></li>
             </ul>
@@ -44,6 +44,11 @@
     <section class="form-section">
       <h2 class="form-title">Cadastre-se</h2>
       <form id="cadastroForm">
+        <div class="input-item full-width">
+          <label for="fotoPerfil">Foto de Perfil</label>
+          <input type="file" id="fotoPerfil" name="fotoPerfil" accept="image/*">
+        </div>
+
         <div class="input-item full-width" role="radiogroup" aria-labelledby="genero-group-label">
           <label id="genero-group-label">Gênero</label>
           <div style="margin-top: 4px;">
@@ -141,7 +146,7 @@
     </section>
   </main>
 
-  <footer class="bg-light py-4">
+  <footer>
         <div class="container d-flex justify-content-between align-items-center">
             <div class="footer-left text-center text-md-start">
                 <h3 class="mb-2">Local</h3>
