--- a/codigo/public/index.html
+++ b/codigo/public/index.html
@@ -9,8 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 </head>
@@ -23,7 +23,7 @@
         </a>
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
             <a href="/public/ranking.html" class="nav-link link-white">Ranking</a> 
-            <a href="#" class="nav-link link-white">ONGs</a>
+            <a href="/public/ongs.html" class="nav-link link-white">ONGs</a>
             <a href="#" class="nav-link link-white">Seja um Voluntário</a>
         </nav>
         
@@ -31,10 +31,10 @@
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
-                <img src="/public/assets/images/usuario.png" alt="Usuário" class="usuario"> 
+                <img src="/public/assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
-                <li><a class="dropdown-item" href="/public/sprint_1/Perfil_usuario/index.html" id="userProfileLink">Perfil</a></li> 
+                <li><a class="dropdown-item" href="/public/perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#" id="logoutLink">Sair</a></li>
             </ul>
