atualização dos caminhos.

--- a/codigo/public/index.html
+++ b/codigo/public/index.html
@@ -17,13 +17,13 @@
 
 <body>
     <header class="d-flex align-items-center p-3 bg-light position-relative">
-        <a href="/public/index.html" class="d-flex align-items-center position-relative z-2"> 
-            <img src="/public/assets/images/logo.png" alt="Logo" class="logo me-3"> 
+        <a href="index.html" class="d-flex align-items-center position-relative z-2"> 
+            <img src="assets/images/logo.png" alt="Logo" class="logo me-3"> 
             <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
-            <a href="/public/ranking.html" class="nav-link link-white">Ranking</a> 
-            <a href="/public/ongs.html" class="nav-link link-white">ONGs</a>
+            <a href="ranking.html" class="nav-link link-white">Ranking</a> 
+            <a href="ongs.html" class="nav-link link-white">ONGs</a>
             <a href="#" class="nav-link link-white">Seja um Voluntário</a>
         </nav>
         
@@ -31,18 +31,18 @@
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
-                <img src="/public/assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
+                <img src="assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
-                <li><a class="dropdown-item" href="/public/perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
+                <li><a class="dropdown-item" href="perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#" id="logoutLink">Sair</a></li>
             </ul>
         </div>
 
         <div class="usuario-container ms-auto" id="userSection">
-            <a href="/public/modulos/login/login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a> 
-            <a href="/public/cadastro_usuario.html" class="btn btn-nutritech-secondary" id="registerButton">Cadastrar</a>
+            <a href="login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a>  
+            <a href="cadastro_usuario.html" class="btn btn-nutritech-secondary" id="registerButton">Cadastrar</a>
         </div>
     </header>
 
