--- a/codigo/public/login.html
+++ b/codigo/public/login.html
@@ -85,7 +85,7 @@
     </div>
   </div>
 
-  <script src="../../assets/js/login.js"></script>
+  <script src="assets/js/login.js"></script>
   <script>
 
 
