--- a/codigo/public/login.html
+++ b/codigo/public/login.html
@@ -5,85 +5,67 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desenvolvimento de Interfaces Web | Login de Usuário</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/login.css">
 </head>
 
 <body class="">
-  <div id="login">
-    <div class="container">
-      <div id="login-row" class="row justify-content-center align-items-center bg-secondary m-5 p-5">
-        <div id="login-column" class="col-md-6">
-          <div id="login-box" class="col-md-12">
-            <form id="loginForm" class="form">
-              <h3 class="text-center text-light">Identificação de Usuário</h3>
-              <div class="form-group">
-                <label for="login" class="text-info text-light">Login</label><br>
-                <input type="text" name="login" id="login" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="senha" class="text-info text-light">Senha</label><br>
-                <input type="password" name="senha" id="senha" class="form-control">
-              </div>
-              <div class="form-group text-center mt-3">
-                <button type="button" class="btn btn-primary text-light" data-toggle="modal" data-target="#loginModal">Registrar</button>
-                <input type="submit" name="submit" class="btn btn-primary text-light" value="Login"> 
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <header class="d-flex justify-content-between align-items-center p-3 bg-light">
+        <a href="#" class="d-flex align-items-center">
+            <img src="assets/images/logo.png" alt="Logo" class="logo me-3">
+            <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
+        </a>
+        <a href="#" class="usuario-container d-flex align-items-center">
+            <h3 class="m-0 me-2">Usuário</h3>
+            <img src="assets/images/usuario.png" alt="Usuário" class="usuario">
+        </a>
+    </header>
 
-  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="loginModalLabel">Login App</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div id="login-box" class="col-md-12">
-            <form id="login-form" class="form" method="post"> 
-              <h3 class="text-center text-info">Novo usuário</h3>
-              <div class="form-group">
-                <label for="login" class="text-info">Usuário</label><br>
-                <input type="text" name="txt_login" id="txt_login" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="nome" class="text-info">Nome completo</label><br>
-                <input type="text" name="txt_nome" id="txt_nome" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="email" class="text-info">email</label><br>
-                <input type="text" name="txt_email" id="txt_email" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="senha" class="text-info">Senha</label><br>
-                <input type="password" name="txt_senha" id="txt_senha" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="senha2" class="text-info">Confirmação de Senha</label><br>
-                <input type="password" name="txt_senha2" id="txt_senha2" class="form-control">
-              </div>
-            </form>
+<main>
+    <div class="form-container">
+      <div class="form-left">
+        <h2>Login</h2>
+        <form id="loginForm">
+          <div class="form-group">
+            <label for="login">Login</label>
+            <input type="text" id="login" name="login" required>
           </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-          <button type="button" id="btn_salvar" class="btn btn-info">Salvar</button>
-        </div>
+          <div class="form-group">
+            <label for="senha">Senha</label>
+            <input type="password" id="senha" name="senha" required>
+          </div>
+          <button type="submit">Entrar</button>
+        </form>
+        <p style="text-align: center; margin-top: 15px;">
+          <button class="btn-inline" data-toggle="modal" data-target="#loginModal">Registrar</button>
+        </p>
       </div>
     </div>
-  </div>
+
+    
+  </main>
+
+  <footer class="bg-light py-4">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="footer-left text-center text-md-start">
+                <h3 class="mb-2">Local</h3>
+                <p>Belo Horizonte</p>
+            </div>
+
+            <div class="footer-center text-center">
+                <p>© 2025 NutriTech</p>
+            </div>
+
+            <div class="footer-right text-center text-md-end">
+                <h3 class="mb-2">Contato</h3>
+                <p class="mb-1">(31) 9999-6666</p>
+                <p>nutritech@pucminas.com.br</p>
+            </div>
+        </div>
+    </footer>
 
   <script src="assets/js/login.js"></script>
   <script>
