Cadastro de voluntario disponivel, apenas estar logado.

--- a/codigo/public/voluntariado_ongs.html
+++ b/codigo/public/voluntariado_ongs.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ONGS</title>
+    <title>Seja Voluntário - Escolha uma ONG</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/ongs.css">
@@ -40,7 +40,8 @@
     </header>
 
     <main class="container mt-4">
-        <h1 class="mb-4 text-center">Nossas ONGs Parceiras</h1>
+        <h1 class="mb-4 text-center">Seja Voluntário</h1>
+        <p class="text-center mb-4">Clique na ONG em que você deseja se voluntariar para preencher suas informações.</p>
         <div class="table-responsive">
             <table class="table table-hover" id="ongsTable">
                 <thead class="table-light">
@@ -56,7 +57,7 @@
         </div>
     </main>
 
-        <footer> 
+    <footer> 
         <div class="container d-flex justify-content-between align-items-center">
             <div class="footer-left text-center text-md-start">
                 <h3 class="mb-2">Local</h3>
@@ -78,5 +79,5 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script src="assets/js/login.js"></script>
-<script src="assets/js/ongs.js"></script>
+<script src="assets/js/voluntariado_ongs.js"></script>
 </html>
