--- a/codigo/public/cartao.html
+++ b/codigo/public/cartao.html
@@ -19,7 +19,7 @@
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
             <a href="ranking.html" class="nav-link link-white">Ranking</a> 
             <a href="ongs.html" class="nav-link link-white">ONGs</a>
-            <a href="#" class="nav-link link-white">Seja um Voluntário</a>
+            <a href="voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
         </nav>
         
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
@@ -112,7 +112,7 @@
     mask: '000'
   });
 </script>
-</body>
+
 
 
     <footer class="bg-light py-4">
@@ -135,4 +135,5 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="assets/js/login.js"></script>
+</body>
 </html>
