--- a/codigo/public/perfildaong.html
+++ b/codigo/public/perfildaong.html
@@ -21,7 +21,7 @@
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
             <a href="ranking.html" class="nav-link link-white">Ranking</a> 
             <a href="ongs.html" class="nav-link link-white">ONGs</a>
-            <a href="#" class="nav-link link-white">Seja um Voluntário</a>
+            <a href="voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
         </nav>
         
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
