possivel fazer doação recorrente e gerenciar essa doação recorrente. tela do cartão corrigida.

--- a/codigo/public/perfil_usuario.html
+++ b/codigo/public/perfil_usuario.html
@@ -70,11 +70,11 @@
             <section id="doacoes-recorrentes" class="align-items-center justify-content-center ">
               
               <p id="gestao" class="h5 text-center pb-2 mb-2">Veja aqui sobre suas doações recorrentes</p>
-              <button id="gerenciar-recorrencia" class="btn bg-verde-fundo w-100 rounded-pill px-3 py-6 shadow text-light ">Gerenciar Doações Recorrentes</button>
+              <a href="gerenciar_recorrencias.html" id="gerenciar-recorrencia" class="btn bg-verde-fundo w-100 rounded-pill px-3 py-6 shadow text-light">Gerenciar Doações Recorrentes</a>
             </section>
             <section id="doar" class="py-3">
               <p id="gestao" class="h5 text-center pb-2 mb-2">Faça uma nova doação</p>
-              <button id="nova-doacao" class="btn bg-verde-fundo w-100 rounded-pill px-3 py-6 shadow text-light ">Nova Doação</button>
+              <a href="ongs.html" id="nova-doacao" class="btn bg-verde-fundo w-100 rounded-pill px-3 py-6 shadow text-light">Nova Doação</a>
             </section>
           </div>
         </div>
