--- a/codigo/public/cartao.html
+++ b/codigo/public/cartao.html
@@ -44,31 +44,60 @@
     <main>
         <div id="pagina">
             <div class="container-pagina">
-                <h4 id="titulo-pagina">Pagamento com Cartão</h4>          
                 <form id="form-cartao">
-                    <div id="container-dados">
-                        <input type="text" id="valor" placeholder="Valor da Doação" required>
-                        <input type="text" id="titular" placeholder="Nome do Titular" required>
-                        <input type="text" id="cpf" placeholder="CPF do Titular" required>
-                        <input type="text" id="num-cartao" placeholder="Número do Cartão" required>
-                        <input type="text" id="validade" placeholder="Validade (MM/AAAA)" required>
-                        <input type="text" id="cvv" placeholder="CVV" required>
-                
-                        <div class="tipo-cartao">
-                            <input type="radio" id="credito" name="tipo" value="credito" checked>
-                            <label for="credito">Crédito</label>
-                            <input type="radio" id="debito" name="tipo" value="debito">
-                            <label for="debito">Débito</label>
+                    <h1>Insira os dados do seu cartão</h1>
+                    <div class="input-grupo">
+                        <label for="valor">Valor da Doação</label>
+                        <input type="text" id="valor" required>
+                    </div>
+                    <div class="input-grupo">
+                        <label for="cpf">CPF</label>
+                        <input type="text" id="cpf" required>
+                    </div>
+                    <div class="input-grupo">
+                        <label for="num-cartao">Número do Cartão</label>
+                        <input type="text" id="num-cartao" required>
+                    </div>
+                    <div class="input-grupo">
+                        <label for="titular">Nome do Titular</label>
+                        <input type="text" id="titular" required>
+                    </div>
+                    <div class="input-flex">
+                        <div class="input-grupo">
+                            <label for="validade">Validade</label>
+                            <input type="text" id="validade" required>
+                        </div>
+                        <div class="input-grupo">
+                            <label for="cvv">CVV</label>
+                            <input type="text" id="cvv" required>
                         </div>
                     </div>
-                    <br>
-                    <button type="submit" id="btn-submit">Doar</button>
+                    <div class="input-grupo">
+                        <input type="checkbox" id="recorrencia" name="recorrencia">
+                        <label for="recorrencia">Tornar esta doação recorrente (mensal)</label>
+                    </div>
+                    <button type="submit" class="btn-doar">Doar</button>
+                    <button type="button" class="btn-voltar" onclick="window.location.href='ongs.html'">Voltar</button>
                 </form>
             </div>
             <div class="cartao-visual">
-                <div class="numero-cartao" id="vis-numero">0000 0000 0000 0000</div>
-                <div class="nome-cartao" id="vis-nome">NOME DO TITULAR</div>
-                <div class="validade-cartao" id="vis-validade">MM/AAAA</div>
+                <div class="frente">
+                    <div class="top">
+                        <div class="chip"></div>
+                        <div class="logo-cartao"></div>
+                    </div>
+                    <div class="numero-cartao" id="vis-numero">0000 0000 0000 0000</div>
+                    <div class="bottom">
+                        <div class="nome-cartao" id="vis-nome">NOME DO TITULAR</div>
+                        <div class="validade-cartao" id="vis-validade">MM/AAAA</div>
+                    </div>
+                </div>
+                <div class="verso">
+                    <div class="faixa-magnetica"></div>
+                    <div class="cvv-display">
+                        <span id="vis-cvv"></span>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
