--- a/codigo/public/gerenciar_recorrencias.html
+++ b/codigo/public/gerenciar_recorrencias.html
@@ -5,19 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Doações Recorrentes</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style_recorrencia.css">
+  <link rel="stylesheet" href="assets/css/recorrencia.css">
+  <link rel="stylesheet" href="assets/css/base.css">
 </head>
 <body class="bg-white text-black">
     
-  <header class="d-flex justify-content-between align-items-center p-3 bg-light">
-        <a href="#" class="d-flex align-items-center">
-            <img src="../img/logo.png" alt="Logo" class="logo me-3">
+    <header class="d-flex align-items-center p-3 bg-light position-relative">
+        <a href="index.html" class="d-flex align-items-center position-relative z-2"> 
+            <img src="assets/images/logo.png" alt="Logo" class="logo me-3"> 
             <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
-        <a href="#" class="usuario-container d-flex align-items-center">
-            <h3 class="m-0 me-2">Usuario</h3>
-            <img src="../img/usuario.png" alt="Usuário" class="usuario">
-        </a>
+        <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
+            <a href="ranking.html" class="nav-link link-white">Ranking</a> 
+            <a href="ongs.html" class="nav-link link-white">ONGs</a>
+            <a href="voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
+        </nav>
+        
+        <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
+            <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
+                <img src="assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
+                <li><a class="dropdown-item" href="perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#" id="logoutLink">Sair</a></li>
+            </ul>
+        </div>
+
+        <div class="usuario-container ms-auto" id="userSection">
+            <a href="login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a> 
+            <a href="cadastro_usuario.html" class="btn btn-nutritech-secondary" id="registerButton">Cadastrar</a>
+        </div>
     </header>
   
   <main class="container mt-5">
@@ -40,7 +60,7 @@
             <!--Botão nova doação-->
             <section id="doar" class="py-3">
               <p id="gestao" class="h5 text-center pb-2 mb-2">Faça uma nova doação</p>
-              <button id="nova-doacao" class="btn bg-verde-fundo w-100 rounded-pill px-3 py-6 shadow text-light ">Nova Doação</button>
+              <a href="ongs.html" id="nova-doacao" class="btn bg-verde-fundo w-100 rounded-pill px-3 py-6 shadow text-light">Nova Doação</a>
             </section>
           </div>
         </div>
@@ -174,8 +194,8 @@
             </div>
         </div>
     </footer>
-                          <script src="app_recorrencia.js"></script>
-
+  <script src="assets/js/login.js"></script>
+  <script src="assets/js/gerenciar_recorrencia.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
