atualização de botão

--- a/codigo/public/cadastro_ongs.html
+++ b/codigo/public/cadastro_ongs.html
@@ -40,7 +40,7 @@
 
         <div class="usuario-container ms-auto" id="userSection">
             <a href="login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a> 
-            <a href="cadastro_usuario.html" class="btn btn-nutritech-secondary" id="registerButton">Cadastrar</a>
+            <a href="cadastro_usuario.html" class="user-btn" style="text-decoration: none; display: inline-block; text-align: center; padding: 10px 20px; background-color: #5D8736; color: rgb(255, 255, 255); border-radius: 5px; font-weight: bold;">Sou um Doador</a>
         </div>
     </header>
     <main>
@@ -169,7 +169,6 @@
                 </fieldset>
 
                 <div class="tipo-usuario" style="margin-bottom: 15px; text-align: center;">
-                    <a href="cadastro_usuario.html" class="user-btn" style="text-decoration: none; display: inline-block; text-align: center; padding: 10px 20px; background-color: #5D8736; color: white; border-radius: 5px; font-weight: bold;">Sou um Doador</a>
 
                 <button type="submit" class="btn-cadastrar">Cadastrar ONG</button>
             </form>
