--- a/codigo/public/perfildaong.html
+++ b/codigo/public/perfildaong.html
@@ -78,8 +78,9 @@
       </div>
 
       <div class="button-group">
-        <button class="btn-doar" id="primaryActionButton">Doar Dinheiro</button>
-        <button class="btn-doar" id="secondaryActionButton">Doar Alimento</button>
+        <button class="btn-doar" id="primaryActionButton">Carregando...</button>
+        <button class="btn-doar" id="secondaryActionButton">Carregando...</button>
+        <button class="btn-doar" id="tertiaryActionButton" style="display: none;">Carregando...</button> <!-- Botão extra, escondido por padrão -->
       </div>
     </div>
   </main>
