agora é possivel requisitar alimento

--- a/codigo/public/cadastro_doacao.html
+++ b/codigo/public/cadastro_doacao.html
@@ -43,18 +43,14 @@
 
 <main class="container-fluid my-5 px-5">
     <div class="row">
-        <div class="col-md-6 border-end pe-4 d-flex flex-column align-items-center py-5">
+        <div class="col-md-6 border-end pe-4 d-flex flex-column align-items-center">
             <h1 class="mb-4 text-center">Cadastro de Doação</h1>
-            <h4 id="donation-target-ong-name" class="mb-3 text-center"></h4> 
+            <h4 id="donation-target-ong-name" class="mb-3 text-center"></h4> <!-- Placeholder for ONG name -->
             <form action="" class="row g-3">
                 <div class="col-12">
                     <label for="alimento" class="form-label">Tipo de Alimento:</label>
                     <select name="alimento" id="alimento" class="form-select" required>
-                        <option value="" disabled selected>Selecione o tipo de alimento</option>
-                        <option value="Macarrão">Macarrão</option>
-                        <option value="Arroz">Arroz</option>
-                        <option value="Feijao">Feijão</option>
-                        <option value="Enlatados">Enlatados</option>
+                        <!-- Options will be dynamically populated by JavaScript -->
                     </select>
                 </div>
                 <div class="col-12">
