--- a/codigo/public/perfildaong.html
+++ b/codigo/public/perfildaong.html
@@ -81,6 +81,7 @@
         <button class="btn-doar" id="primaryActionButton">Carregando...</button>
         <button class="btn-doar" id="secondaryActionButton">Carregando...</button>
         <button class="btn-doar" id="tertiaryActionButton" style="display: none;">Carregando...</button> <!-- Botão extra, escondido por padrão -->
+        <button class="btn-doar" id="btnRequisitarNecessidades" style="display: none;">Requisitar Necessidades</button>
       </div>
     </div>
   </main>
