--- a/codigo/public/cadastro_ongs.html
+++ b/codigo/public/cadastro_ongs.html
@@ -28,7 +28,7 @@
         <div class="dropdown ms-auto position-relative z-2 d-none" id="userDropdownContainer">
             <button class="btn btn-link dropdown-toggle d-flex align-items-center p-0" id="usuarioDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
-                <h3 class="m-0 me-2" id="userNameDisplay">Usuário</h3>
+                <h3 class="m-0 me-2 hide-on-mobile" id="userNameDisplay">Usuário</h3>
                 <img src="assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
@@ -40,7 +40,7 @@
 
         <div class="usuario-container ms-auto" id="userSection">
             <a href="login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a> 
-            <a href="cadastro_usuario.html" class="user-btn" style="text-decoration: none; display: inline-block; text-align: center; padding: 10px 20px; background-color: #5D8736; color: rgb(255, 255, 255); border-radius: 5px; font-weight: bold;">Sou um Doador</a>
+            <a href="cadastro_usuario.html" class="user-btn" style="text-decoration: none; display: inline-block; text-align: center; padding: 10px 20px; background-color: #5D8736; color: rgb(255, 255, 255); border-radius: 5px; font-weight: bold;">Sou Doador</a>
         </div>
     </header>
     <main>
