--- a/codigo/public/explicacao.html
+++ b/codigo/public/explicacao.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/style.css" />
-    <script src="../assets/js/login.js"></script>
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/auth/login.js"></script>
   </head>
   <body>
     <header>
       <div class="banner">
-        <img src="../assets/images/banner_ti.png" alt="" />
+        <img src="assets/images/banner_ti.png" alt="" />
       </div>
       <div class="barra-info">
         <nav class="menu">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">Sobre nós</a></li>
+            <li><a href="index.html" class="d-flex align-items-center position-relative z-2"> 
+                <img src="assets/images/logo.png" alt="Logo" class="logo me-3"> 
+                <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
+              </a>
+            </li>
           </ul>
         </nav>
         <div class="dados-usuario">
@@ -68,11 +72,11 @@
 
         <h4>Arquitetura do site</h4>
         <p>A imagem que se segue apresenta a arquitetura desse ambiente, mostrando as duas refletindo as pastas desse ambiente.</p>
-        <p><img class="img-fluid d-block w-75 m-auto" src="../assets/images/servidor.png" alt=""></p>
+        <p><img class="img-fluid d-block w-75 m-auto" src="assets/images/servidor.png" alt=""></p>
 
         <h4>Arquivo db.json</h4>
         <p>O arquivo JSON utilizado para definição das estruturas dos dados providos pela aplicação é localizado na pasta db e tem um formato como o mostrado no exemplo da figura a seguir. Esse arquivo define uma estrutura hipotética de contatos que descreve itens com os seguintes atributos: <code>id</code>, <code>nome</code> e <code>cidade</code>. para o JSON Server, é fundamental que toda estrutura tenha um atributo de identificador de nome <code>id</code>.</p>
-        <p><img class="img-fluid d-block w-50 m-auto" src="../assets/images/arquivo_json.png" alt=""></p>
+        <p><img class="img-fluid d-block w-50 m-auto" src="assets/images/arquivo_json.png" alt=""></p>
     </main>
   </body>
 </html>
