--- a/codigo/public/modulos/donations/agendamento.html
+++ b/codigo/public/modulos/donations/agendamento.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Desenvolvimento de Interfaces Web | Login de Usuário</title>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cadastro Doação</title>
+    <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="../../assets/css/base.css">
-    <link rel="stylesheet" href="../../assets/css/login.css">
+    <link rel="stylesheet" href="../../assets/css/cadastro_doação.css">
+    <link rel="stylesheet" href="../../assets/css/style.css">
 </head>
-
-<body class="">
+<body>
     <header class="d-flex align-items-center p-3 bg-light position-relative">
         <a href="../../index.html" class="d-flex align-items-center position-relative z-2"> 
             <img src="../../assets/images/logo.png" alt="Logo" class="logo me-3"> 
@@ -39,30 +37,37 @@
         </div>
 
         <div class="usuario-container ms-auto" id="userSection">
-            <a href="/codigo/public/modulos/user/login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a>  
+            <a href="/codigo/public/modulos/user/login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a> 
             <a href="/codigo/public/modulos/user/cadastro_usuario.html" class="btn btn-nutritech-secondary" id="registerButton">Cadastrar</a>
         </div>
     </header>
-<main>
-    <div class="form-container">
-      <div class="form-left">
-        <h2>Login</h2>
-        <form id="loginForm">
-          <div class="form-group">
-            <label for="login">Login</label>
-            <input type="text" id="login" name="login" required>
-          </div>
-          <div class="form-group">
-            <label for="senha">Senha</label>
-            <input type="password" id="senha" name="senha" required>
-          </div>
-          <button type="submit">Entrar</button>
-        </form>
-      </div>
-    </div>
-  </main>
 
-  <footer class="bg-light py-4">
+    <main>
+        <div class="container my-5">
+            <h1 class="mb-4">Agendamento de Coleta de Doação</h1>
+            <h3 id="ong-nome-agendamento" class="mb-4"></h3>
+
+            <form id="agendamentoForm">
+                <div class="mb-3">
+                    <label for="alimentoSelect" class="form-label">Selecione o alimento que deseja doar:</label>
+                    <select id="alimentoSelect" class="form-select" required>
+                        <option value="">Carregando seus alimentos...</option>
+                    </select>
+                </div>
+
+                <div class="mb-3">
+                    <label for="dataColeta" class="form-label">Selecione um dia disponível para a coleta:</label>
+                    <input type="text" class="form-control" id="dataColeta" name="dataColeta" placeholder="Escolha uma data" required>
+                </div>
+
+                <div id="voluntarioInfo" class="mt-4"></div>
+
+                <button type="submit" class="btn btn-success mt-3">Agendar Coleta</button>
+            </form>
+        </div>
+    </main>
+
+    <footer class="bg-light py-4">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="footer-left text-center text-md-start">
                 <h3 class="mb-2">Local</h3>
@@ -81,7 +86,9 @@
         </div>
     </footer>
 
-  <script src="../../assets/js/auth/login.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+        <script src="../../assets/js/donations/agendamento.js"></script>
+        <script src="../../assets/js/auth/login.js"></script>
 </body>
-
 </html>
