--- a/codigo/public/modulos/ong/ongs.html
+++ b/codigo/public/modulos/ong/ongs.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Desenvolvimento de Interfaces Web | Login de Usuário</title>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ONGS</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../assets/css/base.css">
-    <link rel="stylesheet" href="../../assets/css/login.css">
+    <link rel="stylesheet" href="../../assets/css/ongs.css">
 </head>
-
-<body class="">
-    <header class="d-flex align-items-center p-3 bg-light position-relative">
+<body> 
+    <header>
         <a href="../../index.html" class="d-flex align-items-center position-relative z-2"> 
             <img src="../../assets/images/logo.png" alt="Logo" class="logo me-3"> 
             <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
         <nav class="d-flex align-items-center gap-3 position-absolute top-50 start-50 translate-middle-x">
             <a href="../../ranking.html" class="nav-link link-white">Ranking</a> 
-            <a href="../ong/ongs.html" class="nav-link link-white">ONGs</a>
+            <a href="ongs.html" class="nav-link link-white">ONGs</a>
             <a href="../volunteers/voluntariado_ongs.html" class="nav-link link-white">Seja um Voluntário</a>
         </nav>
         
@@ -32,37 +27,36 @@
                 <img src="../../assets/images/usuario.png" alt="Usuário" class="usuario" id="userImageDisplay"> 
             </button>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="usuarioDropdown">
-                <li><a class="dropdown-item" href="/codigo/public/modulos/user/perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
+                <li><a class="dropdown-item" href="../user/perfil_usuario.html" id="dropdownProfileLink">Perfil</a></li> 
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#" id="logoutLink">Sair</a></li>
             </ul>
         </div>
 
         <div class="usuario-container ms-auto" id="userSection">
-            <a href="/codigo/public/modulos/user/login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a>  
-            <a href="/codigo/public/modulos/user/cadastro_usuario.html" class="btn btn-nutritech-secondary" id="registerButton">Cadastrar</a>
+            <a href="../user/login.html" class="btn btn-nutritech-primary me-2" id="loginButton">Login</a> 
+            <a href="../user/cadastro_usuario.html" class="btn btn-nutritech-secondary" id="registerButton">Cadastrar</a>
         </div>
     </header>
-<main>
-    <div class="form-container">
-      <div class="form-left">
-        <h2>Login</h2>
-        <form id="loginForm">
-          <div class="form-group">
-            <label for="login">Login</label>
-            <input type="text" id="login" name="login" required>
-          </div>
-          <div class="form-group">
-            <label for="senha">Senha</label>
-            <input type="password" id="senha" name="senha" required>
-          </div>
-          <button type="submit">Entrar</button>
-        </form>
-      </div>
-    </div>
-  </main>
 
-  <footer class="bg-light py-4">
+    <main class="container mt-4">
+        <h1 class="mb-4 text-center">Nossas ONGs Parceiras</h1>
+        <div class="table-responsive">
+            <table class="table table-hover" id="ongsTable">
+                <thead class="table-light">
+                    <tr>
+                        <th scope="col" style="width: 10%;" aria-label="Imagem da ONG"></th> 
+                        <th scope="col" style="width: 25%;">Nome da ONG</th>
+                        <th scope="col">Descrição</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+    </main>
+
+        <footer> 
         <div class="container d-flex justify-content-between align-items-center">
             <div class="footer-left text-center text-md-start">
                 <h3 class="mb-2">Local</h3>
@@ -80,8 +74,9 @@
             </div>
         </div>
     </footer>
-
-  <script src="../../assets/js/auth/login.js"></script>
+    
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="../../assets/js/ong/ongs.js"></script>
+<script src="../../assets/js/auth/login.js"></script>
 </html>
